--- a/Cantelli.html
+++ b/Cantelli.html
@@ -45,7 +45,7 @@ Piuttosto celebri, nel campo delle lettere, furono ai loro tempi due discendenti
 Vignola ha dedicato a Cantelli una strada e un teatro. All’interno della Biblioteca Comunale “Francesco Selmi” della cittadina, è custodito un prezioso Fondo cartografico Cantelli.</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><big><big><center>Frontespizio del <i>Mercurio Geografico</i> […], In Roma, Alla Pace, All’insegna di Parigi, s.d. [ma: fine XVII secolo].<br> ​In questa raccolta, figurano parecchie carte geografiche di Cantelli.</center></big></big></p>
-<center><img src="img/celebri vignolesi/Cantelli/Mercurio Geografico.jpg" width="400" height="650"></center><br><br>
+<center><img src="img/celebri vignolesi/Cantelli/Mercurio geografico.jpg" width="400" height="650"></center><br><br>
 <p><big><big><center>Cantelli, <i>Carta del Brandeburgo</i>, contenuta ​nell’opera citata sopra. Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Cantelli/Carta del Brandeburgo.jpg" width="800" height="650"></center><br><br>
 <p><big><big><center>Cantelli, <i>Carta della Cina</i>, anch’essa contenuta nell’opera citata sopra. Fonte: google.com</center></big></big></p>
