--- a/Soli3.html
+++ b/Soli3.html
@@ -49,7 +49,7 @@ Soli Muratori si spense a Modena il 29 settembre 1769. In ossequio alle sue volo
 <center><big><big>Il primo dei tre tomi delle <i>Dissertazioni sopra le antichità italiane</i><br> (In Milano [<i>recte</i>: Venezia], A spese di Giambatista Pasquali, 1751) di Muratori, a cura del nipote.</big></big></center><br>
 <center><img src="img/celebri vignolesi/Soli Muratori Giovanni Francesco/Dissertazione.jpg" width="450" height="650"></center><br><br><br>
 <center><big><big>Frontespizio della <i>Vita del Proposto Lodovico Antonio Muratori</i>, opera pubblicata da Soli Muratori nel 1756.</big></big></center><br>
-<center><img src="img/celebri vignolesi/Soli Muratori Giovanni Francesco/Vita del Proposto.jpg" width="450" height="650"></center><br><br><br>
+<center><img src="img/celebri vignolesi/Soli Muratori Giovanni Francesco/vita del proposto.jpg" width="450" height="650"></center><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
