--- a/dicembre.html
+++ b/dicembre.html
@@ -44,7 +44,7 @@ Nell’immagine qui sotto, lapide funeraria di Luca Antonio Tosi, cappella genti
 Di professione ingegnere edile, nel corso della vita Aldo Santi coltivò con impegno svariati settori. A livello nazionale, egli è ancora ricordato come uno dei principali enigmografi del suo tempo e come uno dei padri dell’enigmistica moderna; utilizzò vari pseudonimi, primi fra tutti quelli di «Il Duca Borso» e «Soldatina». Nel 1950 fu vicepresidente – a fianco dell’amico <strong>Ugo Roli</strong> (1887-1959) – del Comitato Vignolese per le Onoranze a <strong>Lodovico Antonio Muratori</strong> (1672-1750) nel Secondo Centenario della Morte.<br>
 Santi si spense a Vignola il 29 giugno 1964. Venne sepolto all’interno del cimitero di Campiglio, nella tomba di famiglia.</big></p>
 <p><big>Nell’immagine qui sotto, Aldo Santi e la seconda moglie Margherita Zagnoli (1888-1974) in una foto tratta dal volume di <strong>Augusta Redorici Roffi</strong> (1922-2010), <i>Tavernelle</i>, Modena, Lito-Tipografia Paltrinieri, 2006, p. 92.</big></p><br><br>
-<img src="img/Celebri Vignolesi/Duca Borso/Santi.jpg" width="450" height="750"><br><br><br><br>
+<img src="img/celebri vignolesi/Duca Borso/Santi.jpg" width="450" height="750"><br><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Aldo Santi?<br>Allora, visita il suo <a href="Santi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 </section>
