--- a/Anniversari.html
+++ b/Anniversari.html
@@ -77,8 +77,8 @@
   <button style="background-color:#E08D65;
   color: brown;
   font-size: 23px;
-  font-family: Cardo"><a href="dicembre.html">Dicembre</a></button><br><br><br>
-  </section><br><br><br>
+  font-family: Cardo"><a href="dicembre.html">Dicembre</a></button><br><br><br><br><br><br><br>
+</section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
