Ho aggiunto nuovi br

--- a/Novità.html
+++ b/Novità.html
@@ -27,7 +27,7 @@
 </header>
 <section><br><br>
 <h2><big>NOVITÀ</big></h2><br><br><br><br>
-<p><center><strong><big><big><big><big><span style="text-decoration: underline;">LA PAGINA È ATTUALMENTE IN COSTRUZIONE</span></big></big></big></big></strong></p>
+<p><center><strong><big><big><big><big><span style="text-decoration: underline;">LA PAGINA È ATTUALMENTE IN COSTRUZIONE</span></big></big></big></big></strong></p><br><br><br><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
