Ho modificato 'Anniversari'
I bottoni non erano ben visibili in una videata unica e ho aggiunto alcuni spazi sotto e sopra la section.

--- a/Anniversari.html
+++ b/Anniversari.html
@@ -27,9 +27,9 @@
 </ul>
 </nav>
 </header>
-<section><br>
+<section>
   <h2><strong><big>ANNIVERSARI</big></strong></h2><br><br>
-  <p><big>In questa sezione, trovano posto gli anniversari della nascita e della morte di illustri Vignolesi​, nonché alcune date significative della loro vita e della storia della comunità di Vignola.</big></p><br><br>
+  <p><big>In questa sezione, trovano posto gli anniversari della nascita e della morte di illustri Vignolesi​,<br> nonché alcune date significative della loro vita e della storia della comunità di Vignola.</big></p><br><br>
   <button style="background-color:#E08D65;
   color: brown;
   font-size: 23px;
@@ -78,7 +78,7 @@
   color: brown;
   font-size: 23px;
   font-family: Cardo"><a href="dicembre.html">Dicembre</a></button><br><br><br><br><br><br><br>
-</section>
+</section><br><br><br>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
