--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -28,22 +28,22 @@
 </header>
 <section><br><br>
 <h2><big>CHI SIAMO?</big></h2><br><br><br>
-<p class="index-p2"><strong><big><big>Questo sito</big></big></strong></p><br>
+<p><strong><big><big>Questo sito</big></big></strong></p><br>
 <p><big>Il presente sito nasce dall’idea di alcuni cultori di storia locale a Vignola (paese in provincia di Modena) con il primario intento di far conoscere meglio quei concittadini di nascita oppure di adozione che, nel passato più o meno recente, hanno dato maggior lustro, nei diversi ambiti, alla loro comunità di appartenenza. Questo è anche un modo per onorarne la memoria.<br>
 Soprattutto negli ultimi decenni, risulta di frequente complicato rinvenire materiale divulgativo rigoroso, se non talora in forma sparsa, che sia capace di appagare la curiosità delle persone interessate come – eventualmente – di incoraggiare ricerche condotte in prima persona. Alla luce di ciò, questo sito vuole offrire un’interfaccia con cui l’utente può interagire senza smarrirsi, così da trovare facilmente le informazioni di maggior rilievo intorno alla vita e alle opere dei personaggi più illustri vissuti a Vignola. In queste pagine, inoltre, è riservato spazio a immagini, filmati e ricorrenze sulla comunità di riferimento e la sua storia.<br>
 L’arricchimento reciproco con i lettori è uno degli obiettivi del sito. Chiunque desideri collaborarvi, lo può fare liberamente a beneficio di tutti.  </big></p><br><br>
-<p class="index-p2"><strong><big><big>Copyright</big></big></strong></p><br>
+<p><strong><big><big>Copyright</big></big></strong></p><br>
 <p><big>I contenuti pubblicati in questo sito non possono essere replicati, neanche parzialmente, in altri siti web, libri, riviste o supporti editoriali senza la preventiva autorizzazione del detentore dei diritti, indipendentemente dalla finalità. L'autorizzazione va chiesta per iscritto via posta elettronica a <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a>.
 Ogni violazione di quanto premesso sarà perseguita a termini di legge.</big></p><br><br>
-<p class="index-p2"><strong><big><big>I coordinatori</big></big></strong></p><br>
+<p><strong><big><big>I coordinatori</big></big></strong></p><br>
 <p><strong><big><big></big><i>Sara Scaglioni</i></big></big></strong></p>
 <p><big>Nata e cresciuta a Vignola, Sara Scaglioni è studentessa di Scienze della Comunicazione presso l’Università di Bologna. Collabora con la rivista culturale e di varia umanità «Il Senso della Repubblica nel XXI secolo» pubblicando articoli su letterati e su scienziati europei dell’Ottocento. Da tempo, conduce ricerche intorno ai Celebri Vignolesi, trovando in questa occupazione un conforto e una motivazione per vivere con più consapevolezza il presente.</big></p><br>
 <p><strong><big><i>Piero Venturelli</i></big></strong></p>
 <p><big>Piero Venturelli è nato a Vignola. Ha dedicato studi e pubblicazioni a figure e ambienti culturali italiani del Quattrocento, alla trattatistica etico-politica fiorentina e veneta del Cinquecento, a lettere e scienze nel Modenese e nel Reggiano in Età Moderna, ad autori illuministi e controrivoluzionari europei. Ha collaborato alla preparazione dell’edizione annotata nella nostra lingua di scritti di autori francesi del Settecento (Montesquieu, Voltaire e Maupertuis) per le case editrici Liguori, Bompiani (poi, Giunti-Bompiani) ed Einaudi.<br>
 È caporedattore della rivista «Montesquieu.it» e redattore dell’omonima biblioteca elettronica. È redattore anche della rivista «Il Senso della Repubblica nel XXI secolo». </big></p><br><br>
-<p class="index-p2"><strong><big><big>Ringraziamenti</big></big></strong></p><br>
+<p><strong><big><big>Ringraziamenti</big></big></strong></p><br>
 <p><big>Si ringraziano per la cortese e generosa disponibilità: Pierluigi Albertini, Giovanni Bartoli e Lily Roglia, Alessandro Carboni, Maria Pia Corsini, Angela Giansante, Maurizio Maggi.</big></p>
-</section>
+</section><br><br><br>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
