--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -42,8 +42,8 @@ Ogni violazione di quanto premesso sarà perseguita a termini di legge.</big></p
 <p><big>Piero Venturelli è nato a Vignola. Ha dedicato studi e pubblicazioni a figure e ambienti culturali italiani del Quattrocento, alla trattatistica etico-politica fiorentina e veneta del Cinquecento, a lettere e scienze nel Modenese e nel Reggiano in Età Moderna, ad autori illuministi e controrivoluzionari europei. Ha collaborato alla preparazione dell’edizione annotata nella nostra lingua di scritti di autori francesi del Settecento (Montesquieu, Voltaire e Maupertuis) per le case editrici Liguori, Bompiani (poi, Giunti-Bompiani) ed Einaudi.<br>
 È caporedattore della rivista «Montesquieu.it» e redattore dell’omonima biblioteca elettronica. È redattore anche della rivista «Il Senso della Repubblica nel XXI secolo». </big></p><br><br>
 <p><strong><big><big>Ringraziamenti</big></big></strong></p><br>
-<p><big>Si ringraziano per la cortese e generosa disponibilità: Pierluigi Albertini, Giovanni Bartoli e Lily Roglia, Alessandro Carboni, Maria Pia Corsini, Angela Giansante, Maurizio Maggi.</big></p>
-</section><br><br><br>
+<p><big>Si ringraziano per la cortese e generosa disponibilità: Pierluigi Albertini, Giovanni Bartoli e Lily Roglia, Alessandro Carboni, Maria Pia Corsini, Angela Giansante, Maurizio Maggi.</big></p><br><br><br>
+</section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
