--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -36,13 +36,14 @@ L’arricchimento reciproco con i lettori è uno degli obiettivi del sito. Chiun
 <p><big>I contenuti pubblicati in questo sito non possono essere replicati, neanche parzialmente, in altri siti web, libri, riviste o supporti editoriali senza la preventiva autorizzazione del detentore dei diritti, indipendentemente dalla finalità. L'autorizzazione va chiesta per iscritto via posta elettronica a <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a>.
 Ogni violazione di quanto premesso sarà perseguita a termini di legge.</big></p><br><br>
 <p><strong><big><big>I coordinatori</big></big></strong></p><br>
+
 <p><strong><big><big></big><i>Sara Scaglioni</i></big></big></strong></p>
-<p><big>Nata e cresciuta a Vignola, Sara Scaglioni è studentessa di Scienze della Comunicazione presso l’Università di Bologna. Collabora con la rivista culturale e di varia umanità «Il Senso della Repubblica nel XXI secolo» pubblicando articoli su letterati e su scienziati europei dell’Ottocento. Da tempo, conduce ricerche intorno agli illustri Vignolesi del passato, trovando in questa occupazione un conforto e una motivazione per vivere con più consapevolezza il presente.</big></p><br>
+<p><big>Nata e cresciuta a Vignola, Sara Scaglioni è studentessa di Scienze della Comunicazione presso l’Università di Bologna. Collabora con la rivista culturale e di varia umanità «Il Senso della Repubblica nel XXI secolo» pubblicando articoli su letterati e su scienziati europei dell’Ottocento. Da tempo, conduce ricerche intorno ai Celebri Vignolesi, trovando in questa occupazione un conforto e una motivazione per vivere con più consapevolezza il presente.</big></p><br>
 <p><strong><big><i>Piero Venturelli</i></big></strong></p>
 <p><big>Piero Venturelli è nato a Vignola. Ha dedicato studi e pubblicazioni a figure e ambienti culturali italiani del Quattrocento, alla trattatistica etico-politica fiorentina e veneta del Cinquecento, a lettere e scienze nel Modenese e nel Reggiano in Età Moderna, ad autori illuministi e controrivoluzionari europei. Ha collaborato alla preparazione dell’edizione annotata nella nostra lingua di scritti di autori francesi del Settecento (Montesquieu, Voltaire e Maupertuis) per le case editrici Liguori, Bompiani (poi, Giunti-Bompiani) ed Einaudi.<br>
 È caporedattore della rivista «Montesquieu.it» e redattore dell’omonima biblioteca elettronica. È redattore anche della rivista «Il Senso della Repubblica nel XXI secolo». </big></p><br><br>
 <p><strong><big><big>Ringraziamenti</big></big></strong></p><br>
-<p><big>Si ringraziano per la cortese e generosa disponibilità: Pierluigi Albertini, Giovanni Bartoli e Lily Roglia, Alessandro Carboni, Maria Pia Corsini, Angela Giansante, Maurizio Maggi.</big></p>
+<p><big>Si ringraziano per la cortese e generosa disponibilità: Pierluigi Albertini, Giovanni Bartoli e Lily Roglia, Alessandro Carboni, Maria Pia Corsini, Angela Giansante, Maurizio Maggi.</big></p><br><br><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
@@ -51,4 +52,5 @@ Editor: Sara Scaglioni
  </footer>
 </body>
 </html>
+
 
