--- a/Anniversari.html
+++ b/Anniversari.html
@@ -29,7 +29,7 @@
 </header>
 <section><br>
   <h2><strong><big>ANNIVERSARI</big></strong></h2><br><br>
-  <p><center><big><big>In questa sezione, trovano posto gli anniversari della nascita e della morte di illustri Vignolesi​,<br> nonché alcune date significative della loro vita e della storia della comunità di Vignola.</center></big></big></p><br><br>
+  <p><center><big><big>In questa sezione, trovano posto gli anniversari della nascita e della morte di illustri Vignolesi​,<br> nonché alcune date significative della loro vita e della storia della comunità di Vignola.</center></big></big></p><br>
   <button style="background-color:#E08D65;
   color: brown;
   font-size: 23px;
