--- a/Plessi1.html
+++ b/Plessi1.html
@@ -36,7 +36,7 @@
 <p><center><big><big>Alessandro Plessi e il figlio Renato nella Biblioteca Comunale di Vignola,<br> allora situata in un’ampia sala del primo piano della rocca (foto risalente al 1900 ca.).<br> Fonte: Raccolta famiglia Plessi.</big></big></center><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/biblioteca.jpg" width="750" height="550"><br><br><br>
 <center><big><big>Cappella funebre di Plessi, cimitero di Vignola.<br> Il busto fu eseguito da Giuseppe Graziosi (1879-1942), mentre l’iscrizione venne dettata da Tommaso Casini (1859-1917).</center></big></big><br>
-<img src="img/celebri vignolesi/Plessi Alessandro/tomba intera.jpg" width="450" height="600"><br><br><br>
+<img src="img/celebri vignolesi/Plessi Alessandro/Tomba intera.jpg" width="450" height="600"><br><br><br>
 <center><big><big>Palazzo avito della famiglia Plessi, lato che dà sull’antica Via Maggiore, oggi Via Garibaldi.</big></big></center><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/palazzo Plessi.jpg" width="800" height="600"></p><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></big></p><br>
