Miglioramento percorso immagine.

--- a/Plessi1.html
+++ b/Plessi1.html
@@ -38,7 +38,7 @@
 <center><big><big>Cappella funebre di Plessi, cimitero di Vignola.<br> Il busto fu eseguito da Giuseppe Graziosi (1879-1942), mentre l’iscrizione venne dettata da Tommaso Casini (1859-1917).</center></big></big><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/Tomba intera.jpg" width="450" height="600"><br><br><br>
 <center><big><big>Palazzo avito della famiglia Plessi, lato che dà sull’antica Via Maggiore, oggi Via Garibaldi.</big></big></center><br>
-<img src="img/celebri vignolesi/Plessi Alessandro/palazzo Plessi.jpg" width="800" height="600"></p><br><br><br>
+<img src="img/celebri vignolesi/Plessi Alessandro/palazzo plessi.jpg" width="800" height="600"></p><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></big></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
