--- a/settembre.html
+++ b/settembre.html
@@ -36,7 +36,7 @@ Sacerdote e dottore in teologia e <i> in utroque iure</i>, Giovanni Francesco So
 Tra le sue opere, va segnalata almeno l’importante biografia dell’illustre zio: <i>Vita del Proposto Lodovico Antonio Muratori</i> (1756).<br>
 Morì a Modena il 29 settembre 1769 e fu inumato in Santa Maria della Pomposa.</big><br><br>
 <big>Nell’immagine qui sotto, frontespizio della <i>Vita del Proposto Lodovico Antonio Muratori</i>, l’opera più famosa di Giovanni Francesco Soli Muratori.</big></big></p><br><br>
-<img src="img/celebri vignolesi/Soli Muratori Giovanni Francesco/Vita del proposto.jpg" width="450" height="600"><br><br><br>
+<img src="img/celebri vignolesi/Soli Muratori Giovanni Francesco/vita del proposto.jpg" width="450" height="600"><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Gian Francesco Soli Muratori?<br>Allora, visita il suo <a href="Soli Muratori.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 
 <p><big><strong>29 settembre 1769</strong>: morì a Modena <strong>GIOVANNI FRANCESCO </strong> (detto <strong>Gianfrancesco</strong> o <strong>Gian-Francesco</strong>) <strong>SOLI</strong> (poi, <strong>SOLI MURATORI</strong>), sacerdote, storico, erudito, biografo, bibliotecario e archivista. La sua tomba si trova nella locale chiesa di Santa Maria della Pomposa.<br><br>
