Correzione 'Francesco Selmi' nella dicitura della seconda immagine.

--- a/Selmi.html
+++ b/Selmi.html
@@ -73,7 +73,7 @@ Vignola deve molto a questo suo figlio, che le fu per tutta la vita legatissimo:
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><center><big><big>Dagherrotipo che ritrae Selmi, nel suo laboratorio reggiano, a 30 anni;<br> si tratta di uno dei primissimi dagherrotipi mai realizzati in Italia. Fonte: Fondo archivistico Selmi.</big></big></center><br>
 	<center><img src="img/celebri vignolesi/Selmi/dagherrotipo.jpg" width="480" height="750"></center><br><br><br>
-	<center><big><big>Dipinto a olio anonimo e senza data (probabilmente della seconda metà del 1859) raffigurante Francesco Selmi.<br>Oggi si trova a Modena, all’interno del Rettorato dell’Università di Modena e Reggio Emilia. Fonte: google.com</big></big></center><br>
+	<center><big><big>Dipinto a olio anonimo e senza data (probabilmente della seconda metà del 1859) raffigurante Selmi.<br>Oggi si trova a Modena, all’interno del Rettorato dell’Università di Modena e Reggio Emilia. Fonte: google.com</big></big></center><br>
 	<img src="img/celebri vignolesi/Selmi/ritratto.jpg" width="500" height="650"><br><br><br>
 	<center><big><big>Selmi all’apparente età di circa 47-48 anni. Fonte: Fondo archivistico Selmi.</big></big></center><br>
 	<img src="img/celebri vignolesi/Selmi/Selmi quarantacinquenne.jpg" width="500" height="700"><br><br><br>
