Correzione di alcuni refusi.

--- a/giugno.html
+++ b/giugno.html
@@ -30,11 +30,11 @@
 <section><br>
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 <h3><big><strong>GIUGNO</strong></big></h3><br><br><br>
-<p><big><strong>4 giugno 1871</strong>: esattamente 150 anni fa venne <strong>inaugurata dal sindaco Alessandro Plessi (1824-1907) la BIBLIOTECA COMUNALE DI VIGNOLA</strong>.<br><br>
+<p><big><strong>4 giugno 1871</strong>: venne <strong>inaugurata dal sindaco Alessandro Plessi (1824-1907) la BIBLIOTECA COMUNALE DI VIGNOLA</strong>.<br><br>
 La sua prima sede fu all’interno della rocca di Vignola (all’epoca, di proprietà dei prìncipi <strong>Boncompagni Ludovisi</strong> e residenza del Comune), e precisamente nella Sala dei Tronchi d’Albero (già Camera dei Cimieri). Al tempo, contava all’incirca 5000 volumi ed era previsto il solo servizio di consultazione in loco.<br>
 Statutariamente, il direttore <i>de iure</i> della Biblioteca Comunale di Vignola coincideva con il sindaco <i>pro tempore</i>. Il suo primo direttore <i>de facto</i> fu don <strong>Giovanni Rodolfi</strong> (1828-1896), designato ufficialmente vicedirettore della stessa.<br>
 I due principali promotori della costituzione della Biblioteca Comunale di Vignola furono il suddetto Plessi e il celebre uomo di scienze e lettere <strong>Francesco Selmi</strong> (1817-1881), il quale – oltre tutto – con generosità la arricchisce via via di innumerevoli opere; anche per questo, la Biblioteca è attualmente intitolata a Selmi.<br><br>
-Nell’immagine sottostante, lapide in ricordo di don Giovanni Rodolfi, a lungo affissa nella Biblioteca Comunale di Vignola e attualmente collocata nella Villa Tosi Bellucci (dal 1916, sede del Municipio di Vignola).</p><br><br><br>
+Nell’immagine sottostante, lapide in ricordo di don Giovanni Rodolfi, a lungo affissa nella Biblioteca Comunale di Vignola e attualmente collocata nella Villa Tosi Bellucci (dal 1916, sede del Municipio di Vignola).</p><br><br>
 <img src="img/celebri vignolesi/Rodolfi Giovanni/lapide.jpg" width="350" height="650"><br><br><br><br><br>
 
 <p class="index-p3"><strong>12 giugno 1924</strong>: nacque a Campiglio di Vignola <strong>CASIMIRO BETTELLI</strong>, sacerdote, insegnante, poeta, scrittore, giornalista e collezionista d’arte.<br><br> 
