--- a/Novità.html
+++ b/Novità.html
@@ -27,6 +27,9 @@
 </header>
 <section><br><br>
 <h2><big>NOVITÀ</big></h2><br><br><br><br>
+<p><big><big><span style="text-decoration: underline;">16 dicembre 2021</span></big></big></p><br><br>
+<p><big><i>«[l]a concatenazione delle generazioni diede opportunità di condizioni, e mezzi di perpetuarle con monumenti, simboli e lettere; onde un uomo solo, per quanto glielo concedono le sue facoltà, può ricevere i sentimenti e i pensieri di molti secoli, riprodurli con l’originalità della propria tempra e con gli accidenti che caratterizzano il tempo in cui vive, e rimandarli alle genti dell’avvenire</i>.</big></p>
+<p><big><strong>UGO FOSCOLO</strong></big></p><br><br><br>
 <p><big><big><span style="text-decoration: underline;">11 dicembre 2021</span></big></big></p><br><br>
 
 <p><big>Oggi attiriamo l’attenzione su una ricorrenza che riguarda un importante Vignolese del passato, <strong>FRANCESCO SELMI</strong> (1817-1881), chimico, inventore, divulgatore culturale e scientifico, patriota, alto funzionario pubblico, biografo, narratore, studioso di Dante e dei primi secoli della lingua italiana, nonché profondo conoscitore tanto della storia del paese natale quanto delle figure dei suoi figli più illustri.<br><br> 
