--- a/Novità.html
+++ b/Novità.html
@@ -28,7 +28,7 @@
 <section><br><br>
 <h2><big>NOVITÀ</big></h2><br><br><br><br>
 <p><big><big><span style="text-decoration: underline;">16 dicembre 2021</span></big></big></p><br><br>
-<p><big><i>«[l]a concatenazione delle generazioni diede opportunità di condizioni, e mezzi di perpetuarle con monumenti, simboli e lettere; onde un uomo solo, per quanto glielo concedono le sue facoltà, può ricevere i sentimenti e i pensieri di molti secoli, riprodurli con l’originalità della propria tempra e con gli accidenti che caratterizzano il tempo in cui vive, e rimandarli alle genti dell’avvenire</i>.</big></p>
+<p><big><i>[l]a concatenazione delle generazioni diede opportunità di condizioni, e mezzi di perpetuarle con monumenti, simboli e lettere; onde un uomo solo, per quanto glielo concedono le sue facoltà, può ricevere i sentimenti e i pensieri di molti secoli, riprodurli con l’originalità della propria tempra e con gli accidenti che caratterizzano il tempo in cui vive, e rimandarli alle genti dell’avvenire</i>.</big></p>
 <p><big><strong>UGO FOSCOLO</strong></big></p><br><br><br>
 <p><big><big><span style="text-decoration: underline;">11 dicembre 2021</span></big></big></p><br><br>
 
