--- a/Selmi.html
+++ b/Selmi.html
@@ -83,7 +83,7 @@ Vignola deve molto a questo suo figlio, che le fu per tutta la vita legatissimo:
 	<img src="img/celebri vignolesi/Selmi/libro Selmi.jpg" width="450" height="650"><br><br><br>
 	<center><big><big> Ritratto di Selmi in età senile, incisione eseguita a partire da un disegno dell’artista laziale Dante Paolocci (1849-1926);<br> accompagna <i>Francesco Selmi</i>, necrologio anonimo uscito in «L’Illustrazione Italiana»,<br> 28 agosto 1881, t. II dell’annata, pp. 139-140, con l’immagine a p. 140. Fonte: google.com</big></big></center><br>
 	<center><img src="img/celebri vignolesi/Selmi/illustrazione.jpg" width="450" height="650"></center><br><br><br>
-	<center><big><big> Immagine recente della cappella funebre di Selmi, inaugurata nel 1901 all’interno del cimitero di Vignola.<br> Sotto il busto in gesso, opera dello scultore maranese Domenico Bernabei (1854-1936), figura la lapide commemorativa dettata da Luigi Zini (1821-1894), amico dell’estinto.</big></big></center><br>
+	<center><big><big> Immagine recente della cappella funebre di Selmi, inaugurata nel 1901 all’interno del cimitero di Vignola.<br> Sotto il busto in gesso, opera dello scultore maranese Domenico Bernabei (1854-1936),<br> figura la lapide commemorativa dettata da Luigi Zini (1821-1894), amico dell’estinto.</big></big></center><br>
 	<center><img src="img/celebri vignolesi/Selmi/Busto e lapide.jpg" width="390" height="680"></center><br><br>
 	<center><big><big>Lapide commemorativa.</big></big></center><br>
 		<center><img src="img/celebri vignolesi/Selmi/lapide.jpg" width="450" height="700"></center><br><br><br>
