--- a/Cantelli.html
+++ b/Cantelli.html
@@ -44,14 +44,14 @@ Cantelli morì nella metropoli estense il 30 novembre 1695, pianto dai familiari
 Piuttosto celebri, nel campo delle lettere, furono ai loro tempi due discendenti del nostro personaggio, entrambi privi di legami con Vignola: Veronica Cantelli (1713-1798), che era molto probabilmente una pronipote del cartografo, e un figlio di una sorella di quest’autrice, Luigi Cerretti (1738-1808), amico fraterno e sodale di <strong>Agostino Paradisi <i>il Giovane</i></strong> (1736-1783).<br>
 Vignola ha dedicato a Cantelli una strada e un teatro. All’interno della Biblioteca Comunale “Francesco Selmi” della cittadina, è custodito un prezioso Fondo cartografico Cantelli.</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
+<p><big><big><center>Caterina Piotti Pìrola (1800-1842?), ritratto di Giacomo Cantelli, incisione.<br> Fonte: <i>Iconografia dei celebri vignolesi edita per cura di Francesco Selmi</i>, Modena, Presso il libraio Giuseppe Luppi, 1839. </center></big></big></p>
+<center><img src="img/celebri vignolesi/Cantelli/Incisione.jpg" width="450" height="600"></center><br><br><br>
 <p><big><big><center>Frontespizio del <i>Mercurio Geografico</i> […], In Roma, Alla Pace, All’insegna di Parigi, s.d. [ma: fine XVII secolo].<br> ​In questa raccolta, figurano parecchie carte geografiche di Cantelli.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Cantelli/Mercurio geografico.jpg" width="400" height="650"></center><br><br>
 <p><big><big><center>Cantelli, <i>Carta del Brandeburgo</i>, contenuta ​nell’opera citata sopra. Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Cantelli/Carta del Brandeburgo.jpg" width="800" height="650"></center><br><br>
 <p><big><big><center>Cantelli, <i>Carta della Cina</i>, anch’essa contenuta nell’opera citata sopra. Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Cantelli/Carta della Cina.jpg" width="850" height="650"></center><br><br>
-<p><big><big><center>Caterina Piotti-Pìrola (1800-1842?), ritratto di Giacomo Cantelli, incisione.<br> Fonte: <i>Iconografia dei celebri vignolesi edita per cura di Francesco Selmi</i>, Modena, Presso il libraio Giuseppe Luppi, 1839. </center></big></big></p>
-<center><img src="img/celebri vignolesi/Cantelli/Incisione.jpg" width="450" height="600"></center><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
