--- a/Paradisi.html
+++ b/Paradisi.html
@@ -49,13 +49,15 @@ Il nostro personaggio spirò a Reggio Emilia il 19 febbraio 1783. Fu inumato nel
 <h4><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></h4><br>
 <p><big><big><center>Lapide che, nel cortile interno della rocca di Vignola, attesta la nascita di Paradisi all’interno del monumentale edificio.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Paradisi/lapide.jpg" width="800" height="600"></center><br><br><br>
-<p><big><big><center>Agostino Paradisi <i>il Giovane</i> in un’incisione della milanese Caterina Piotti Pìrola (1800-1842?) pubblicata per la prima volta nel 1837 o nel 1838.<br> Una riproduzione dell’opera è anche in testa alla dispensa di Francesco Predari riservata al nostro personaggio<br> nel​l’<i>Iconografia dei celebri vignolesi edita per cura di Francesco Selmi</i>, Modena, Presso il libraio Giuseppe Luppi, 1839.</center></big></big></p><br>
+<p><big><big><center>Agostino Paradisi <i>il Giovane</i> in un’incisione della milanese Caterina Piotti Pìrola (1800-1842?)<br> pubblicata per la prima volta nel 1837 o nel 1838.<br> Una riproduzione dell’opera è anche in testa alla dispensa di Francesco Predari riservata al nostro personaggio<br> nel​l’<i>Iconografia dei celebri vignolesi edita per cura di Francesco Selmi</i>, Modena, Presso il libraio Giuseppe Luppi, 1839.</center></big></big></p><br>
 <img src="img/celebri vignolesi/Paradisi/Incisione.jpg" width="530" height="600"><br><br>
-<p><big><big><center>Busto di Agostino Paradisi <i>il Giovane</i> (1780), attribuito allo scultore romano<br> Bartolomeo Cavaceppi (1716 ca. - 1799); collezione privata. Fonte: google.com</center></big></big></p>
+<p><big><big><center>Busto di Agostino Paradisi <i>il Giovane</i> (1780), attribuito allo scultore romano<br> Bartolomeo Cavaceppi (1716 ca. - 1799); collezione privata.<br>
+Fonte: google.com</center></big></big></p>
 <img src="img/celebri vignolesi/Paradisi/Cavaceppi.jpg" width="450" height="650"><br><br>
 <p><big><big><center>Palazzo Tirelli (già Palazzo Gabbi), Reggio Emilia, a lungo dimora di Paradisi. Fonte: google.com</center></big></big></p>
 <img src="img/celebri vignolesi/Paradisi/palazzo tirelli.jpg" width="470" height="700"><br><br>
-<p><big><big><center>Sede del Collegio Nazareno di Roma, in un’antica stampa<br> (il Collegio è tuttora accolto nel palazzo cinquecentesco in fondo). Fonte: google.com</center></big></big></p>
+<p><big><big><center>Sede del Collegio Nazareno di Roma, in un’antica stampa<br> (il Collegio è tuttora accolto nel palazzo cinquecentesco in fondo).<br> 
+Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Paradisi/collegio.jpg" width="500" height="350"></center><br><br>
 <p><big><big><center>Frontespizio della raccolta poetica <i>Versi sciolti</i>, In Bologna, A S. Tommaso D’Aquino, 1762. Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Paradisi/Versi sciolti.jpg" width="450" height="650"></center><br><br>
