Ho modificato il testo dell'ultimo elemento inserito.

--- a/Novità.html
+++ b/Novità.html
@@ -29,12 +29,12 @@
 <h2><big>NOVITÀ</big></h2><br><br><br><br>
 
 <p><big><big><span style="text-decoration: underline;">02 gennaio 2022</span></big></big></p><br><br>
-<p><big><big><big>NON SOLO VIGNOLA</big></big></big></p><br><br><br>
-<p><big>Nel corso dei secoli, molte persone nate a Vignola sono state costrette ad abbandonarla per i motivi più svariati. Ad esempio, dopo la morte del padre Giammaria, governatore generale del Marchesato di Vignola, AGOSTINO PARADISI <i>IL GIOVANE</i> (1736-1783), futuro poeta, saggista, traduttore, drammaturgo, storico ed economista, dovette lasciare il paese ad appena un anno di età e, insieme con la famiglia, si trasferì a Reggio Emilia (all’epoca, chiamata indifferentemente Reggio di Modena o Reggio di Lombardia), città che lo vide fanciullo, giovane adulto (dopo cinque anni di studi presso il Collegio Nazareno di Roma) e nell’ultimo triennio di vita (dopo otto anni a Modena come professore universitario e consigliere estense).
+<p><big><big>NON SOLO VIGNOLA</big></big></p><br><br><br>
+<p><big>Nel corso dei secoli, molte persone nate a Vignola sono state costrette ad abbandonarla per i motivi più svariati. Ad esempio, dopo la morte del padre Giammaria, governatore generale del Marchesato di Vignola, AGOSTINO PARADISI <i>IL GIOVANE</i> (1736-1783), futuro poeta, saggista, traduttore, drammaturgo, storico ed economista, dovette lasciare il paese ad appena un anno di età e, insieme con la famiglia, si trasferì a Reggio Emilia (all’epoca, chiamata indifferentemente Reggio di Modena o Reggio di Lombardia), città che lo vide fanciullo, giovane adulto (dopo cinque anni di studi presso il Collegio Nazareno di Roma) e nell’ultimo triennio di vita (dopo otto anni a Modena come professore universitario e consigliere estense).<br><br>
 
 A Reggio Emilia, i Paradisi dimorarono nel prestigioso Palazzo Gabbi (oggi Palazzo Tirelli). L’edificio era stato costruito nel secolo precedente dai marchesi Gabbi e sarebbe stato acquistato dai marchesi Tirelli nella prima metà dell’Ottocento. Nel piano nobile, cui si giunge attraverso un ampio scalone marmoreo, le principali decorazioni furono affidate al pittore reggiano Prospero Zanichelli (1698-1772) e al pittore modenese Francesco Vellani (1688-1768); quest’ultimo eseguì, fra l’altro, otto grandi quadri (raffiguranti scene tratte dalla letteratura classica) per il salone centrale (da ballo), alto 13 metri. Ai giorni nostri, il Palazzo è la sede della Società del Casino e del Rotary Club di Reggio Emilia.  
 
-Se vuoi saperne di più su Paradisi, visita il suo Profilo nella sezione “Celebri Vignolesi” del nostro sito: https://sarascaglioni.github.io/Celebri-Vignolesi/Paradisi.html</big></p><br><br><br>
+Se vuoi saperne di più su Paradisi, visita il suo <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Paradisi.html">Profilo</a> nella sezione “Celebri Vignolesi” del nostro sito!</big></p><br><br><br>
 	
 <p><big><big><span style="text-decoration: underline;">28 dicembre 2021</span></big></big></p><br><br>
 <p><big><i>I forti sono generati da forti e buoni</i>.</big></p>
