--- a/Novità.html
+++ b/Novità.html
@@ -34,10 +34,9 @@
 
 A Reggio Emilia, i Paradisi dimorarono nel prestigioso Palazzo Gabbi (oggi Palazzo Tirelli). L’edificio era stato costruito nel secolo precedente dai marchesi Gabbi e sarebbe stato acquistato dai marchesi Tirelli nella prima metà dell’Ottocento. Nel piano nobile, cui si giunge attraverso un ampio scalone marmoreo, le principali decorazioni furono affidate al pittore reggiano Prospero Zanichelli (1698-1772) e al pittore modenese Francesco Vellani (1688-1768); quest’ultimo eseguì, fra l’altro, otto grandi quadri (raffiguranti scene tratte dalla letteratura classica) per il salone centrale (da ballo), alto 13 metri. Ai giorni nostri, il Palazzo è la sede della Società del Casino e del Rotary Club di Reggio Emilia.<br><br>  
 
-Se vuoi saperne di più su Paradisi, visita il suo <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Paradisi.html">Profilo</a> nella sezione “Celebri Vignolesi” del nostro sito!</big></p><br><br>
-	
+Se vuoi saperne di più su Paradisi, visita il suo <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Paradisi.html">Profilo</a> nella sezione “Celebri Vignolesi” del nostro sito!</big></p><br>
 <p><big>Nell'immagine sottostante, Palazzo Tirelli ai nostri giorni</big></p><br><br>
-<img src="img/celebri vignolesi/Paradisi/palazzo tirelli.jpg" width="470" height="700"><br><br><br>
+<p><img src="img/celebri vignolesi/Paradisi/palazzo tirelli.jpg" width="470" height="700"></p><br><br>
 	
 <p><big><big><span style="text-decoration: underline;">28 dicembre 2021</span></big></big></p><br><br>
 <p><big><i>I forti sono generati da forti e buoni</i>.</big></p>
