--- a/Novità.html
+++ b/Novità.html
@@ -27,10 +27,11 @@
 </header>
 <section><br><br>
 <h2><big>NOVITÀ</big></h2><br><br><br><br>
-<p><big><big><big>Tramonto da Santa Croce</big></big></big></p><br>
+	<p><big><big><span style="text-decoration: underline;">06 gennaio 2022</span></big></big></p><br><br>
+<p><big><big><big>Tramonto da Santa Croce</big></big></big></p>
 	
-<video controls width="300" height="250" >
-<source src="video per sito.mp4" type="video/mp4"></video><br><br><br>
+<p><video controls width="600" height="500" >
+	<source src="video per sito.mp4" type="video/mp4"></video></p><br><br><br>
 
 <p><big><big><span style="text-decoration: underline;">02 gennaio 2022</span></big></big></p><br><br>
 <p><big><big>NON SOLO VIGNOLA</big></big></p><br><br><br>
