--- a/homepage.html
+++ b/homepage.html
@@ -18,7 +18,7 @@
 <h1><img src="img/logo sito.jpg" width="150" height="100">CELEBRI VIGNOLESI</h1>
 <nav>
 <ul>
-<strong><li class="active"><a href="index.html">HOME</a></li>
+<strong><li class="active"><a href="homepage.html">HOME</a></li>
 <li><a href="Chi siamo.html">CHI SIAMO</a></li>
 <li><a href="Novità.html">NOVITÀ</a></li>
 <li><a href="Celebri Vignolesi.html">CELEBRI VIGNOLESI</a></li>
