--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body><header>
 <h1>CELEBRI VIGNOLESI</h1><br><br>
-<big><big><center><strong><big><a href="index.html">ENTRA</a></big></strong></center></big></big><br><br>
+<big><big><center><strong><big><a href="homepage.html">ENTRA</a></big></strong></center></big></big><br><br>
 <center><img src="img/img2.jpg" width="600" height="400"></center>
 <p><center><big><big>Fotografia risalente al 1900 ca. (fonte: Raccolta famiglia Plessi): Alessandro Plessi e il figlio Renato<br> nella Biblioteca Comunale di Vignola, allora situata in un’ampia sala del primo piano della rocca.</big></big></center></p><br>
 </header>
