--- a/gennaio.html
+++ b/gennaio.html
@@ -67,7 +67,7 @@ Nell’immagine sottostante, lastra funeraria di Luigi Bondioli (cimitero di Vig
 
   <p><big><strong>23 gennaio 1750</strong>: morì a Modena <strong>LODOVICO ANTONIO MURATORI</strong>, ecclesiastico, erudito, storico, trattatista, archivista e bibliotecario. È uno dei personaggi di cultura più famosi e influenti dell’Europa settecentesca.<br><br>
 Nell’immagine qui sotto, la tomba monumentale di Muratori in Santa Maria della Pomposa, opera realizzata tra il 1928 e il 1930 su disegno dell’artista milanese Lodovico Pogliaghi (1857-1950), e inaugurata nel 1931.</big></p><br><br>
-<img src="img/celebri vignolesi/Muratori/sepolcro.jpg" width="530" height="700"><br><br><br><br>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/sepolcro.jpg" width="530" height="700"><br><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Lodovico Antonio Muratori?<br>Allora, visita il suo <a href="Muratori.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
   
 <p><big><strong>25 gennaio 1401</strong> (calendario giuliano): grazie alla donazione di Niccolò III d’Este (1383-1441), marchese di Ferrara, il nobiluomo ferrarese <strong>UGUCCIONE I CONTRARI</strong> (1379-1448) diventò <strong>signore di Vignola</strong>.<br><br>  
