--- a/Muratori.html
+++ b/Muratori.html
@@ -43,7 +43,7 @@
 </big></p>
 </big></p>
 <p><center><big><big>Tomba monumentale di Muratori in Santa Maria della Pomposa, opera realizzata tra il 1928 e il 1930<br> su disegno dell’artista milanese Lodovico Pogliaghi (1857-1950), e inaugurata nel 1931. Fonte: google.com</big></big></center></p>
-<img src="img/celebri vignolesi/Muratori Lodovico Antonio/Sepolcro MODIFICATA.jpg" width="500" height="650"></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/sepolcro.jpg" width="530" height="700"></p>
 <p><strong><big><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></big></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
