--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 <big><big><center><strong><big><a href="homepage.html">ENTRA</a></big></strong></center></big></big><br><br>
 <center><img src="img/img2.jpg" width="600" height="400"></center>
 <p><center><big><big>Fotografia risalente al 1900 ca.: Alessandro Plessi e il figlio Renato<br>
-nella Biblioteca Comunale di Vignola, allora situata in un’ampia sala del primo piano della rocca. Fonte:<br>
-Raccolta famiglia Plessi.</big></big></center></p><br>
+nella Biblioteca Comunale di Vignola, allora situata in un’ampia sala del primo piano della rocca. Fonte:<br> Raccolta famiglia Plessi.</big></big></center></p><br>
 </header>
 </body>
 </html>
