--- a/Novità.html
+++ b/Novità.html
@@ -27,12 +27,17 @@
 </header>
 <section><br><br>
 <h2><big>NOVITÀ</big></h2><br><br><br><br>
+	
+	<p><big><big><span style="text-decoration: underline;">14 gennaio 2022</span></big></big></p><br><br>
+	<p><big><big><big>Oggi ricordiamo il pittore vignolese CESARE SOLI (1926-2010) con una sua natura morta dei primi anni Cinquanta. Olio su tavola. Opera inedita, collezione privata.</big></big></big></p>
+	<img src="img/celebri vignolesi/FOTO VARIE/soli.jpg" width="470" height="700">
+	
 	<p><big><big><span style="text-decoration: underline;">06 gennaio 2022</span></big></big></p><br><br>
 <p><big><big><big>Tramonto da Santa Croce</big></big></big></p>
 <p><video controls width="600" height="500" >
 	<source src="video/video per sito.mp4" type="video/mp4"></video></p><br><br><br>
 
-<p><big><big><span style="text-decoration: underline;">02 gennaio 2022</span></big></big></p><br><br>
+	<p><big><big><span style="text-decoration: underline;">02 gennaio 2022</span></big></big></p><br><br>
 <p><big><big>NON SOLO VIGNOLA</big></big></p><br><br><br>
 <p><big>Nel corso dei secoli, molte persone nate a Vignola sono state costrette ad abbandonarla per i motivi più svariati. Ad esempio, dopo la morte del padre Giammaria, governatore generale del Marchesato di Vignola, AGOSTINO PARADISI <i>IL GIOVANE</i> (1736-1783), futuro poeta, saggista, traduttore, drammaturgo, storico ed economista, dovette lasciare il paese ad appena un anno di età e, insieme con la famiglia, si trasferì a Reggio Emilia (all’epoca, chiamata indifferentemente Reggio di Modena o Reggio di Lombardia), città che lo vide fanciullo, giovane adulto (dopo cinque anni di studi presso il Collegio Nazareno di Roma) e nell’ultimo triennio di vita (dopo otto anni a Modena come professore universitario e consigliere estense).<br><br>
 
