--- a/gennaio.html
+++ b/gennaio.html
@@ -61,7 +61,7 @@ Luigi Bondioli nacque a Vignola il 28 maggio 1885. Diplomatosi in Scultura e in 
 Fu uno dei promotori delle celebrazioni per il Quarto Centenario Barozziano (1907).<br>
 A Vignola sono presenti alcune sue opere. Tra di esse, spiccano soprattutto: il <i>Monumento ai Caduti</i> (1922-1923), che attualmente è collocato nell’aiuola centrale del giardino della Villa Tosi Bellucci (dal 1916, Residenza Municipale); il <i>Teatro Nuovo</i> di viale Umberto I (oggi via Mazzini), edificio inaugurato nel 1924 e del quale egli eseguì non solo il progetto architettonico, ma anche i grandi bassorilievi posti a destra e a sinistra della parte alta della facciata (il <i>Teatro Nuovo</i> prese poi le denominazioni successive di <i>Cinema Teatro Impero</i> e <i>Cinema Bagnoli</i>, e da un quarto di secolo vanta destinazioni d’uso differenti da quelle originarie).<br>
 Molto legato al suo paese natale, Bondioli contribuì a fondarvi nel 1928 la Scuola Bottega Artigiana, che fu riconosciuta come sezione staccata dell’Istituto “Fermo Corni” di Modena e che conseguì lusinghieri risultati a livello nazionale. Inoltre, presso questa Scuola, egli tenne un corso di disegno applicato all’arte.<br><br>
-Nell’immagine sottostante, lastra funeraria di Luigi Bondioli (cimitero di Vignola).</big></p><br><br>
+Nell’immagine qui sotto, lastra funeraria di Luigi Bondioli (cimitero di Vignola).</big></p><br><br>
 <img src="img/celebri vignolesi/Bondioli/tomba.jpg" width="450" height="700"><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Luigi Bondioli?<br>Allora, visita il suo <a href="Bondioli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 
