--- a/Novità.html
+++ b/Novità.html
@@ -30,7 +30,7 @@
 	
 	<p><big><big><span style="text-decoration: underline;">14 gennaio 2022</span></big></big></p><br><br>
 	<p><big>Oggi ricordiamo il pittore vignolese CESARE SOLI (1926-2010) con una sua natura morta dei primi anni Cinquanta. Olio su tavola. Opera inedita, collezione privata.</big></p>
-	<img src="img/celebri vignolesi/FOTO VARIE/soli.jpg" width="550" height="700">
+	<img src="img/FOTO VARIE/soli.jpg" width="550" height="700">
 	
 	<p><big><big><span style="text-decoration: underline;">06 gennaio 2022</span></big></big></p><br><br>
 <p><big><big><big>Tramonto da Santa Croce</big></big></big></p>
