--- a/Novità.html
+++ b/Novità.html
@@ -33,7 +33,7 @@
 	<img src="img/FOTO VARIE/soli.jpg" width="750" height="670"><br><br><br>
 	
 	<p><big><big><span style="text-decoration: underline;">06 gennaio 2022</span></big></big></p><br><br>
-<p><big><big><big>Tramonto da Santa Croce</big></big></big></p>
+<p><big>Tramonto da Santa Croce</big></p>
 <p><video controls width="600" height="500" >
 	<source src="video/video per sito.mp4" type="video/mp4"></video></p><br><br><br>
 
