--- a/Novità.html
+++ b/Novità.html
@@ -28,11 +28,16 @@
 <section><br><br>
 <h2><big>NOVITÀ</big></h2><br><br><br><br>
 	
-	<p><big><big><span style="text-decoration: underline;">14 gennaio 2022</span></big></big></p><br><br>
-	<p><big>Oggi ricordiamo il pittore vignolese CESARE SOLI (1926-2010) con una sua natura morta dei primi anni Cinquanta. Olio su tavola. Opera inedita, collezione privata.</big></p>
-	<img src="img/FOTO VARIE/soli.jpg" width="750" height="670"><br><br><br>
+<p><big><big><span style="text-decoration: underline;">16 gennaio 2021</span></big></big></p><br><br>
+<p><big><i>A egregie cose il forte animo accendono
+L’urne de’ forti</i> […].</big></p>
+<p><big><strong>UGO FOSCOLO</strong></big></p><br><br><br>
 	
-	<p><big><big><span style="text-decoration: underline;">06 gennaio 2022</span></big></big></p><br><br>
+<p><big><big><span style="text-decoration: underline;">14 gennaio 2022</span></big></big></p><br><br>
+<p><big>Oggi ricordiamo il pittore vignolese CESARE SOLI (1926-2010) con una sua natura morta dei primi anni Cinquanta. Olio su tavola. Opera inedita, collezione privata.</big></p>
+<img src="img/FOTO VARIE/soli.jpg" width="750" height="670"><br><br><br>
+	
+<p><big><big><span style="text-decoration: underline;">06 gennaio 2022</span></big></big></p><br><br>
 <p><big>Tramonto da Santa Croce</big></p>
 <p><video controls width="600" height="500" >
 	<source src="video/video per sito.mp4" type="video/mp4"></video></p><br><br><br>
