--- a/Novità.html
+++ b/Novità.html
@@ -28,7 +28,11 @@
 <section><br><br>
 <h2><big>NOVITÀ</big></h2><br><br><br><br>
 	
-<p><big><big><span style="text-decoration: underline;">16 gennaio 2021</span></big></big></p><br><br>
+	<p><big><big><span style="text-decoration: underline;">17 gennaio 2022</span></big></big></p><br><br>
+<p><big>Nell’immagine, la facciata dell'ottocentesca Villa Bellucci (poi, Tosi Bellucci), dal 1916 Residenza Municipale di Vignola.</big></p>
+	<img src="img/FOTO VARIE/soli.jpg" width="750" height="670"><br><br><br>
+	
+<p><big><big><span style="text-decoration: underline;">16 gennaio 2022</span></big></big></p><br><br>
 <p><big><i>A egregie cose il forte animo accendono
 L’urne de’ forti</i> […].</big></p>
 <p><big><strong>UGO FOSCOLO</strong></big></p><br><br><br>
