--- a/Novità.html
+++ b/Novità.html
@@ -29,7 +29,7 @@
 <h2><big>NOVITÀ</big></h2><br><br><br><br>
 	
 	<p><big><big><span style="text-decoration: underline;">17 gennaio 2022</span></big></big></p><br><br>
-<p><big>Nell’immagine, la facciata dell'ottocentesca Villa Bellucci (poi, Tosi Bellucci), dal 1916 Residenza Municipale di Vignola.</big></p>
+<p><big>Nell’immagine, la facciata dell’ottocentesca Villa Bellucci (poi, Tosi Bellucci), dal 1916 Residenza Municipale di Vignola.</big></p>
 <img src="img/FOTO VARIE/villa Tosi Bellucci.jpg" width="750" height="600"><br><br><br>
 	
 <p><big><big><span style="text-decoration: underline;">16 gennaio 2022</span></big></big></p><br><br>
