--- a/Contatti.html
+++ b/Contatti.html
@@ -19,7 +19,7 @@
 <nav>
 <ul>
 <strong><li><a href="homepage.html">HOME</a></li>
-<li><a href="Chi siamo.html">CHI SIAMO</a></li>
+<li><a href="Chi siamo.html">CHI SIAMO?</a></li>
 <li><a href="Novità.html">NOVITÀ</a></li>
 <li><a href="Celebri Vignolesi.html">CELEBRI VIGNOLESI</a></li>
 <li><a href="Anniversari.html">ANNIVERSARI</a></li>
