--- a/Tosi.html
+++ b/Tosi.html
@@ -18,7 +18,7 @@
 <nav>
 <ul>
 <strong><li><a href="homepage.html">HOME</a></li>
-<li><a href="Chi siamo.html">CHI SIAMO</a></li>
+<li><a href="Chi siamo.html">CHI SIAMO?</a></li>
 <li><a href="Novità.html">NOVITÀ</a></li>
 <li class="active"><a href="Celebri Vignolesi.html">CELEBRI VIGNOLESI</a></li>
 <li><a href="Anniversari.html">ANNIVERSARI</a></li>
