--- a/Roli.html
+++ b/Roli.html
@@ -42,6 +42,8 @@ Roli godette di una certa fama a livello nazionale sia come enigmografo (con lo 
 Durante la vita, il nostro personaggio, nella sua terra d’origine, era apprezzato soprattutto come solerte cultore di memorie patrie e attento studioso di storia locale; nel 1950 fu vicepresidente, a fianco dell’amico enigmografo Aldo Santi, del Comitato Vignolese per le Onoranze a Lodovico Antonio Muratori nel Secondo Centenario della Morte. Attualmente, nel paese natale, egli è ricordato soprattutto per pubblicazioni poetiche spesso di alta sensibilità e di indubbio estro, fra le quali primeggiano due raccolte di versi, <i>Faléster</i> (1936, in dialetto modenese) e <i>Faléster dl’Inféren</i> (1951, in italiano e in dialetto).<br>
 Roli morì a Vignola il 25 giugno 1959.</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
+	<p><center><big><big>Frontespizio di <i>Faléster dl'Inféren</i> (1951), opera in versi (dialettali e italiani) di Roli.</big></big></center><br>
+		<center><img src="img/celebri vignolesi/Roli Ugo/libro.jpg" width="500" height="700"></center><br><br>
 <p><center><big><big>Locandina ufficiale della mostra vignolese su Roli (ottobre 2017). Fonte: google.com</big></big></center><br>
 	<center><img src="img/celebri vignolesi/Roli Ugo/locandina.jpg" width="500" height="700"></center><br><br>
 	<p><center><big><big>Tomba di Roli e di alcuni familiari nel cimitero di Vignola.</big></big></center><br>
