--- a/febbraio.html
+++ b/febbraio.html
@@ -65,7 +65,7 @@ Roli morì a Vignola il 25 giugno 1959.<br>
 
 Dal 9 al 15 ottobre 2017 si è svolta la mostra <i>Ugo Roli da Vignola</i>, allestita nelle Sale della Meridiana della Rocca di Vignola. L’hanno curata il Gruppo di Documentazione vignolese “Mezaluna - Mario Menabue” e la famiglia Roli, con la collaborazione della Fondazione di Vignola e del Circolo Paradisi di Vignola.<br><br>
 
-Nell’immagine qui sotto, frontespizio di <i>Faléster dl'Inféren</i> (1951), opera in versi (dialettali e italiani) di Roli.</big></p><br>
+Nell’immagine qui sotto, frontespizio di <i>Faléster dl’Inféren</i> (1951), opera in versi (dialettali e italiani) di Ugo Roli.</big></p><br>
 		<center><img src="img/celebri vignolesi/Roli Ugo/libro.jpg" width="500" height="700"></center><br><br>															   <br>
 <p><strong><big><big><center>Vuoi saperne di più su Ugo Roli?<br>Allora, visita il suo <a href="Roli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
