--- a/Garavini.html
+++ b/Garavini.html
@@ -35,7 +35,7 @@
 
 Quella di Carlo Garavini è una figura ai nostri giorni poco nota e raramente ricordata, almeno nel paese natale, ma assai conosciuta e importante nel XIX secolo anche al di fuori dell’Italia.<br>
 
-Nato in una famiglia di commercianti il cui ceppo antico proveniva dalla comunità di Campiglio, il nostro personaggio era il terzogenito del benestante Pietro e passò l’infanzia a Vignola, alla quale rimase sempre legato benché egli abbia trascorso la maggior parte della propria vita molto distante dal Modenese. Indirizzò da località lontane parecchie lettere a concittadini (se ne sono conservate diverse) e di lui sono documentati alcuni soggiorni nel paese natale; a proposito del suo rapporto con quest’ultimo, si tornerà oltre.<br>  
+Nato in una famiglia di commercianti il cui ceppo antico proveniva dalla comunità di Campiglio, il nostro personaggio era il terzogenito del benestante Pietro e passò l’infanzia nel paese natale, a cui rimase sempre legato benché egli abbia trascorso la maggior parte della propria vita molto distante dal Modenese. Indirizzò da località lontane parecchie lettere a concittadini (se ne conservano tuttora diverse) e di lui sono documentati alcuni soggiorni a Vignola; in merito al suo rapporto con quest’ultima, si tornerà oltre.<br>  
 
 Lontano parente di <strong>Francesco Selmi</strong> (1817-1881), Garavini fu il dedicatario della prima fatica editoriale del futuro illustre scienziato, letterato, patriota e funzionario pubblico nato anch’egli a Vignola, cioè la cura dell’<i>Iconografia dei celebri vignolesi</i> (1839).<br>  
 
