--- a/luglio.html
+++ b/luglio.html
@@ -18,8 +18,8 @@
 <h1><img src="img/logo sito.jpg" width="150" height="100">CELEBRI VIGNOLESI</h1>
 <nav>
 <ul>
-<strong><li><a href="homepage.html">HOME</a></li>
-<li><a href="Chi siamo.html">CHI SIAMO?</a></li>
+<strong><li><a href="index.html">HOME</a></li>
+<li><a href="Chi siamo.html">CHI SIAMO</a></li>
 <li><a href="Novità.html">NOVITÀ</a></li>
 <li><a href="Celebri Vignolesi.html">CELEBRI VIGNOLESI</a></li>
 <li class="active"><a href="Anniversari.html">ANNIVERSARI</a></li>
@@ -38,7 +38,7 @@ Nell’immagine sottostante, quella che tradizionalmente viene considerata la ca
 <img src="img/celebri vignolesi/Fontana Giovanni/casa natale.jpg" width="400" height="650"><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Giovanni Fontana?<br>Allora, visita il suo <a href="Fontana.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br><br>
 
-<p><big><strong>7 luglio 1573</strong> (calendario giuliano): morì a Roma <strong>GIACOMO</strong> – ma, già nel corso della vita, chiamato più comunemente, alla toscana, <strong>Jacopo</strong> – <strong>BAROZZI</strong>, detto <strong><i>il Vignola</i></strong>, uno degli architetti più insigni e apprezzati del tardo Rinascimento italiano, notissimo e influentissimo anche come teorico e trattatista dell’architettura. Venne sepolto nel Pantheon.<br><br>
+<p><big><strong>7 luglio 1573</strong> (calendario giuliano): morì a Roma <strong>GIACOMO</strong> – ma, già nel corso della vita, chiamato più comunemente, alla toscana, <strong>Jacopo</strong> – <strong>BAROZZI</strong>, detto <strong><i>il Vignola</i></strong>, uno degli architetti più insigni e apprezzati del tardo Rinascimento italiano, notissimo e influentissimo anche come teorico e trattatista dell’architettura. Venne inumato nel Pantheon; al giorno d'oggi, è assente l'indicazione del punto esatto della sepoltura.<br><br>
 Nato a Vignola il 1° ottobre 1507 (calendario giuliano), Giacomo Barozzi si trasferì da adolescente a Bologna per ricevere un’approfondita formazione nei campi della prospettiva, della pittura e, in un secondo tempo, anche dell’architettura. Negli anni Trenta, a Roma, fu attivo come pittore e studiò i monumenti antichi. 
 Tra il 1541 e il 1543, soggiornò in Francia, lavorando presso la reggia di Fontainebleau, dove curò il getto di copie di bronzo di calchi di statue della collezione vaticana.<br>
 Tornato a Bologna, <i>il Vignola</i> ebbe un ruolo di primo piano sia nei progetti di completamento della facciata della basilica di San Petronio (progetti che non vennero realizzati) sia nei lavori per il ponte sul Samoggia e per il canale Navile. A Roma, i Farnese lo vollero come proprio architetto di famiglia (1550) ed egli fu scelto come architetto capo del cantiere della basilica di San Pietro (1567).
