--- a/ottobre.html
+++ b/ottobre.html
@@ -18,8 +18,8 @@
 <h1><img src="img/logo sito.jpg" width="150" height="100">CELEBRI VIGNOLESI</h1>
 <nav>
 <ul>
-<strong><li><a href="homepage.html">HOME</a></li>
-<li><a href="Chi siamo.html">CHI SIAMO?</a></li>
+<strong><li><a href="index.html">HOME</a></li>
+<li><a href="Chi siamo.html">CHI SIAMO</a></li>
 <li><a href="Novità.html">NOVITÀ</a></li>
 <li><a href="Celebri Vignolesi.html">CELEBRI VIGNOLESI</a></li>
 <li class="active"><a href="Anniversari.html">ANNIVERSARI</a></li>
@@ -38,7 +38,7 @@ Nel 1550, a Roma, diventò l’architetto della potentissima famiglia Farnese; n
 Tra le opere che caratterizzarono il culmine della sua carriera professionale, in special modo vanno ricordate: a Roma, gli interventi presso Villa Giulia e i progetti della chiesa del Gesù, del tempietto di Sant’Andrea sulla Via Flaminia e di Sant’Anna dei Palafrenieri in Vaticano; vicino a Viterbo, i progetti del Palazzo Farnese a Caprarola (partendo da un preesistente fortilizio) e di risistemazione di settori e edifici del borgo cittadino, nonché il progetto di un blocco del Palazzo Farnese a Latera; a Rieti, almeno il palazzo del Seminario e la chiesa di Sant’Antonio Abate recano sostanziose tracce della sua mano; sempre in Lazio, e per la precisione nei pressi del Monte Soratte, ideò la chiesa di San Lorenzo Martire a Sant’Oreste; a Piacenza, ridisegnò il Palazzo Farnese, che non venne poi completato; a Bologna, concepì la facciata del portico dei Banchi.<br>
 Inoltre, con ogni probabilità Barozzi collaborò alla realizzazione del Palazzo Contrari a Vignola (iniziato nel 1560), in particolar modo per quanto riguarda l’ideazione della scala elicoidale autoportante costruita al suo interno.<br>
 <i>Il Vignola</i> è passato alla storia anche come insigne trattatista grazie ai seguenti libri: <i>Regola delli cinque ordini d’architettura</i> (1562), ove viene delineato il concetto di ordine architettonico; <i>Le due regole della prospettiva pratica</i> (1583, postumo).<br>
-Barozzi morì a Roma il 7 luglio 1573 (calendario giuliano) e venne sepolto nel Pantheon.</big></p>
+Barozzi morì a Roma il 7 luglio 1573 (calendario giuliano) e venne inumato nel Pantheon; ai nostri giorni non è più presente l'indicazione del punto esatto della sepoltura.</big></p>
 <p><big>Nell’immagine sottostante, frontespizio della barozziana <i>Regola delli cinque ordini d’architettura</i>. Fonte: google.com</big></p><br><br>
 <img src="img/celebri vignolesi/Barozzi/regola.jpg" width="500" height="650"></p><br>
 <p><strong><big><big><center>Vuoi saperne di più su Giacomo Barozzi?<br>Allora, visita il suo <a href="Barozzi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
