--- a/Novità.html
+++ b/Novità.html
@@ -29,8 +29,7 @@
 <h2><big>NOVITÀ</big></h2><br><br><br><br>
 	
 <p><big><big><span style="text-decoration: underline;">23 gennaio 2022</span></big></big></p><br><br>
-<p><big>Oggi, 23 gennaio 2022, cade l’anniversario della scomparsa di LODOVICO ANTONIO MURATORI, ecclesiastico, erudito, storico, trattatista, archivista e bibliotecario. Questo illustre Vignolese morì a Modena il 23 gennaio 1750. Fu uno degli uomini di cultura più famosi e influenti dell'Europa settecentesca.<br><br>
-Qui sotto, un breve video girato nei giorni scorsi all'interno di Santa Maria della Pomposa, chiesa modenese della quale Muratori fu proposto dal 1716 al 1733.</big><br>
+<p><big>Qui sotto, un breve video girato nei giorni scorsi all’interno di Santa Maria della Pomposa, chiesa modenese della quale Muratori fu proposto dal 1716 al 1733.</big><br>
 <video width="350" height="250" controls>
     <source src="video/Santa Maria della Pomposa.mp4" type="video/mp4"></video></p>
     	<br><br><br>
