--- a/Garavini.html
+++ b/Garavini.html
@@ -33,9 +33,9 @@
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 	<p><big><strong>CARLO GARAVINI</strong>, diplomatico, viaggiatore, avventuriero, commerciante, geografo e armatore, nacque a Vignola il 6 maggio 1807.<br>
 
-Quella di Carlo Garavini è una figura ai nostri giorni poco nota e raramente ricordata, almeno nel paese natale, ma assai conosciuta e importante nel XIX secolo anche al di fuori dell’Italia.<br>
+Quella di Carlo Garavini è una figura ai nostri giorni poco nota e raramente ricordata, almeno nel Modenese, ma assai conosciuta e importante nel XIX secolo anche al di fuori dell’Italia.<br>
 
-Nato in una famiglia di commercianti il cui ceppo antico proveniva dalla comunità di Campiglio, il nostro personaggio era il terzogenito del benestante Pietro e passò l’infanzia nel paese natale, a cui rimase sempre legato benché egli abbia trascorso la maggior parte della propria vita molto distante dal Modenese. Indirizzò da località lontane parecchie lettere a concittadini (se ne conservano tuttora diverse) e di lui sono documentati alcuni soggiorni a Vignola; in merito al suo rapporto con quest’ultima, si tornerà oltre.<br>  
+Nato in una famiglia di commercianti il cui ceppo antico proveniva dalla comunità di Campiglio, il nostro personaggio era il terzogenito del benestante Pietro e passò l’infanzia nel paese natale, a cui rimase sempre legato benché egli abbia trascorso la maggior parte della propria vita molto distante dall’Emilia. Indirizzò da località lontane parecchie lettere a concittadini (se ne conservano tuttora diverse) e di lui sono documentati alcuni soggiorni a Vignola; in merito al suo rapporto con quest’ultima, si tornerà oltre.<br>  
 
 Lontano parente di <strong>Francesco Selmi</strong> (1817-1881), Garavini fu il dedicatario della prima fatica editoriale del futuro illustre scienziato, letterato, patriota e funzionario pubblico nato anch’egli a Vignola, cioè la cura dell’<i>Iconografia dei celebri vignolesi</i> (1839).<br>  
 
@@ -53,7 +53,7 @@ La sorella di Garavini, Luigia (1796-1870), era la moglie di Giambattista Belluc
 
 Garavini aveva anche un fratello minore, Barlamo, del quale non si sa molto: era un valente ebanista; nel 1862 lasciò erede del suo cospicuo patrimonio la Congregazione di Carità di Vignola al fine di rendere l’ospedale più ampio, comodo e salubre, e con due letti costantemente a disposizione di altrettanti infermi poveri; nel Casino Bellucci, è ancora presente un suo bel ritratto del 1837.<br>  
 
-Nel 1867 Garavini, appassionato d’arte, riuscì a rintracciare e ad acquistare il disperso <i>Autoritratto</i> di <strong>Giuseppe Maria Soli</strong> (1745-1822), illustre architetto e pittore vignolese, e lo fece giungere alla sorella appena rimasta vedova. Quest’opera, che risale all’età matura dell’artista (di sicuro, venne dipinta non prima del 1805), risulta a tutt’oggi custodita nel suddetto Casino ed è stata restaurata nel 2015.<br> 
+Nel 1867 Garavini, appassionato d’arte, riuscì a rintracciare e ad acquistare il disperso <i>Autoritratto</i> di <strong>Giuseppe Maria Soli</strong> (1745-1822), illustre architetto e pittore vignolese, e lo fece giungere alla sorella appena rimasta vedova. Quest’opera, che risale all’età matura dell’artista (di sicuro, venne dipinta non prima del 1805), risulta a tutt’oggi conservata nel suddetto Casino e ha subito un restauro nel 2015.<br> 
 
 Allo stato attuale degli studi, non siamo al corrente né della data né del luogo della morte di Garavini (nel 1874, però, egli risultava sicuramente in vita; esistono molte probabilità che lo fosse ancora nel 1880, e forse lo era anche nel 1885).</big></p><br><br><br>
 
